name: postie
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: alex.biehl@gmail.com
author: Alex Biehl
data-dir: ""

library
    build-depends: base >=4, network >=2.4.1.2, bytestring >=0.10.0.2,
                   tls >=1.2.2, pipes >=4.1.0, pipes-attoparsec >=0.4.0.1,
                   pipes-parse >=3.0.1, attoparsec >=0.10.4.0, transformers >=0.3.0.0,
                   mtl >=2.1.2, text >=0.11.3.1, cprng-aes >=0.5.2,
                   data-default-class >=0.0.1
    exposed-modules: Web.Postie Web.Postie.Types Web.Postie.Settings
                     Web.Postie.Connection Web.Postie.Session Web.Postie.SMTP
                     Web.Postie.Parser
    exposed: True
    buildable: True
    default-language: Haskell2010
    default-extensions: Rank2Types OverloadedStrings
    hs-source-dirs: src
